# cbnv-website

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  conftest.py  docker-compose.override.yml  docker-compose.yml  gunicorn.conf.py  manage.py  package-lock.json  package.json  playwright.config.js  pyproject.toml  pytest.ini  requirements.txt
.github/: pull_request_template.md
.github/workflows/: openspec-pr-check.yml
_legacy/: cookies.txt  hugo-bastos-de-paula.md  import_session.py  jerome-baron.md
_legacy/cbnv/: Exported Items.json
_legacy/cbnvufmg/: 2024-09-05_20-26-20_UTC.json.xz  2024-09-05_20-26-20_UTC.txt  2024-09-05_23-19-25_UTC.json.xz  2024-09-05_23-19-25_UTC.txt  2024-09-17_12-08-57_UTC.json.xz  2024-09-17_12-08-57_UTC.txt  2024-09-17_21-14-44_UTC.json.xz  2024-09-17_21-14-44_UTC.txt  2024-09-20_17-51-40_UTC.json.xz  2024-09-20_17-51-40_UTC.txt  2024-09-26_19-11-30_UTC.json.xz  2024-09-26_19-11-30_UTC.txt  2024-10-07_19-44-22_UTC.json.xz  (+51 more)
accounts/: admin.py  dashboard_urls.py  decorators.py  forms.py  models.py  signals.py  urls.py  views.py
cbnv/: asgi.py  urls.py  wsgi.py
core/: blocks.py  design_urls.py  email.py  models.py  storage.py  urls.py  views.py
docs/: CBNV2026_DESIGN.md  CBNV2026_GitHub_Issues_Checklist_v1.md  CBNV2026_OpenSpec_Plano_Implementacao_v1.md  CBNV2026_OpenSpec_Plano_Implementacao_v2.md  CBNV2026_Requisitos_Arquitetura_v1.md  CBNV2026_Stitch_PROMPT_v1.txt  canonical-content-seed.md  cms-content-models.md  design-system.md  program-venue-data.md  reports-exports-and-indicators.md
nginx/: default.conf.template
notifications/: services.py
openspec/: config.yaml  project.md
pages/: content.py  forms.py  models.py
proceedings/: admin.py  apps.py  forms.py  managers.py  models.py  urls.py  views.py
program/: models.py
reports/: export.py  urls.py  views.py
reviews/: forms.py  managers.py  models.py  urls.py  views.py
scripts/: backup.sh  create_cbnv_github_backlog.sh  create_initial_news.py  open_pr_for_change.sh  populate_about_page.py  rebuild.sh  restore.sh  restore_all.sh  start_change.sh
sponsors/: apps.py  models.py
src/: input.css
submissions/: forms.py  managers.py  models.py  urls.py  views.py
templates/: base.html
videos/: models.py
(+882 files in other folders)
