[project]
name = "cbnv-website"
version = "0.1.0"
description = "Website e plataforma digital do XII Congresso Brasileiro de Neurociências da Visão (CBNV 2026)"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "django==6.0.4",
    "wagtail==7.3.1",
    "psycopg2-binary==2.9.12",
    "django-extensions==4.1",
    "django-debug-toolbar==6.3.0",
    "pillow==12.2.0",
    "anyascii==0.3.3",
    "asgiref==3.11.1",
    "beautifulsoup4==4.14.3",
    "certifi==2026.4.22",
    "charset-normalizer==3.4.7",
    "defusedxml==0.7.1",
    "django-filter==25.2",
    "django-modelcluster==6.5",
    "django-permissionedforms==0.1",
    "django-stubs-ext==6.0.3",
    "django-taggit==6.1.0",
    "django-tasks==0.12.0",
    "django-treebeard==4.8.0",
    "djangorestframework==3.17.1",
    "draftjs-exporter==5.2.0",
    "et-xmlfile==2.0.0",
    "exceptiongroup==1.3.1",
    "filetype==1.2.0",
    "idna==3.13",
    "iniconfig==2.3.0",
    "laces==0.1.2",
    "modelsearch==1.2.2",
    "openpyxl==3.1.5",
    "packaging==26.2",
    "pillow-heif==1.3.0",
    "pluggy==1.6.0",
    "pygments==2.20.0",
    "pytest==9.0.3",
    "pytest-django==4.12.0",
    "requests==2.33.1",
    "soupsieve==2.8.3",
    "sqlparse==0.5.5",
    "telepath==0.3.1",
    "tomli==2.4.1",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
    "willow==1.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.0",
]
