[project]
name = "cbnv-website"
version = "0.1.0"
description = "Website e plataforma digital do XII Congresso Brasileiro de Neurociências da Visão (CBNV 2026)"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "django>=6.0,<6.1",
    "wagtail>=7.4,<7.5",
    "psycopg2-binary>=2.9,<3.0",
    "pillow>=12,<13",
    "django-extensions>=4.1,<5.0",
    "django-debug-toolbar>=6.3,<7.0",
    "django-filter>=25.2",
    "djangorestframework>=3.17,<4.0",
    "openpyxl>=3.1,<4.0",
    "requests>=2.33,<3.0",
    "django-widget-tweaks>=1.5,<2.0",
    "django-axes>=8,<9",
    "django-countries>=8.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0,<10.0",
    "pytest-django>=4.12,<5.0",
]
